# Beam-NG-Vehicle-Editor

./: Cargo.toml  README.md
src/: app.rs  backup.rs  config.rs  engine.rs  error.rs  json_util.rs  main.rs  mod_scanner.rs  parts.rs  scan_util.rs  scanner.rs  settings.rs  state.rs  thumbnail.rs  vehicle_source.rs
src/gui/: backup_ui.rs  editor.rs  grid.rs  mod.rs  mods_ui.rs  theme.rs
target-build/: .rustc_info.json
