[package]
name = "beam-ng-vehicle-editor"
version = "0.1.0"
edition = "2021"
description = "Preview and edit BeamNG vehicle configs with thumbnails, engine swaps, and backup/restore"
license = "MIT"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
eframe = { version = "0.29", default-features = true, features = ["default_fonts", "glow"] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
directories = "5"
anyhow = "1"
thiserror = "2"
sha2 = "0.10"
hex = "0.4"
env_logger = "0.11"

[profile.release]
lto = true
codegen-units = 1
strip = true
